Converted the character API to use openapi
