# acore-server/src/main/java/net/kwas/acore/server/item/Item.java
@@ -1,13 +1,0 @@
-package net.kwas.acore.server.item;
-
-public record Item(
-  long id,
-  long itemTemplateId,
-  String name,
-  String description,
-  String iconUrl,
-  long ownerId,
-  String ownerName,
-  long count
-) {
-}
